# homework4

./: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  printConsole.cpp  printConsole.h  printFile.cpp  printFile.h  printMatrix.cpp  printMatrix.h
